--- a/style/style.css
+++ b/style/style.css
@@ -165,10 +165,47 @@ a:before, a:after, a > span:before, a > span:after {
     transform: translateX(0);
   }
   
+.custom-icon{
+  background: url(/img/icons.png) no-repeat;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+}
+
+.custom-icon-flag-az {
+  background-position-x: -14px;
+  background-position-y: -14px;
+  height: 14px;
+}
+
+.custom-icon-flag-en {
+  background-position-x: -153px;
+  background-position-y: -18px;
+  height: 14px;
+}
+
+.custom-icon-star{
+  background-position-x: -14px;
+    background-position-y: -67px;
+  width: 20px;
+  margin-left:7px ;
+}
+.custom-icon-smile{
+  background-position-x: -223px;
+  background-position-y: -69px;
+  width: 20px;
+  height: 20px;
   
+}
+
+
+
+.dropdown-toggle::after{margin-left: 1.5rem;}
+.top-190{top: -195px;}
   /* //////// */
 .d-none-hover{display: block;}
-a:hover{color: rgb(49, 49, 49);}
+a:hover{color: rgb(56, 42, 42);}
 
 .submit-btn{
   border: 1px solid #22BEA5;
