--- a/style/style.css
+++ b/style/style.css
@@ -463,21 +463,24 @@ a:hover {
 .button-jittery a button {
   text-decoration: none;
   padding: 5px 20px;
-  /* background: transparent; */
-  color: #da8e3d;
-  font-weight: lighter;
-  border: 1px solid #da8e3d;
+  background-color: #17a2b8!important;
+  color: #ffffff;
+  font-weight: bold;
   border-radius: 30px;
+  border: 0;
   outline: none;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+  0 2px 4px rgba(0,0,0,0.07), 
+  0 4px 8px rgba(0,0,0,0.07), 
+  0 8px 16px rgba(0,0,0,0.07),
+  0 16px 32px rgba(0,0,0,0.07), 
+  0 32px 64px rgba(0,0,0,0.07);
   background-color: transparent;
   cursor: pointer;
   position: relative;
   transition: 0.2s ease-in-out;
 }
 
-.button-jittery a button {
-  animation: jittery 4s infinite;
-}
 .button-jittery a button:hover {
   animation: heartbeat 0.2s infinite;
 }
@@ -531,7 +534,7 @@ table td {
 @keyframes heartbeat {
   50% {
     transform: scale(1.1);
- }
+  }
 }
 
 @media only screen and (max-width: 768px) {
